To do: Comments estimator, changes to add sensors, comments final plots hardware tests

--- a/Thesis_Cutini/thesis_bib.bib
+++ b/Thesis_Cutini/thesis_bib.bib
@@ -107,9 +107,10 @@ keywords = {Model predictive control, Reference tracking, No offset, Integral co
   year={2006},
   volume={},
   number={},
-  pages={6 pp.-},
   keywords={Observers;State estimation;Educational institutions;Mathematical model;Data mining;Design engineering;Equations;Control theory;Robustness;Feedback control} 
 } %doi={10.1109/ACC.2006.1657545}
+
+  %pages={6 pp.-},
 
 @article{MPC_basics,
 title = {Constrained model predictive control: Stability and optimality},
@@ -147,10 +148,10 @@ keywords = {Model predictive control, Stability, Optimality, Robustness}
       title={Model-plant mismatch learning offset-free model predictive control}, 
       author={Sang Hwan Son and Jong Woo Kim and Tae Hoon Oh and Jong Min Lee},
       year={2020},
-      eprint={2012.02753},
       archivePrefix={arXiv},
       primaryClass={eess.SY}
 }
+   %   eprint={2012.02753},
 
 @misc{diamondleague,
   title = {Diamond League Homepage},
@@ -162,20 +163,43 @@ keywords = {Model predictive control, Stability, Optimality, Robustness}
       title={CVXPY: A Python-Embedded Modeling Language for Convex Optimization}, 
       author={Steven Diamond and Stephen Boyd},
       year={2016},
-      eprint={1603.00943},
-      archivePrefix={arXiv},
-      primaryClass={math.OC}
+      eprint={1603.00943}
 }
+
+     % archivePrefix={arXiv},
+      %primaryClass={math.OC}
 
 @article{Stellato_2020,
    title={OSQP: an operator splitting solver for quadratic programs},
    volume={12},
    ISSN={1867-2957},
-   url={http://dx.doi.org/10.1007/s12532-020-00179-2},
-   DOI={10.1007/s12532-020-00179-2},
    number={4},
    journal={Mathematical Programming Computation},
    publisher={Springer Science and Business Media LLC},
    author={Stellato, Bartolomeo and Banjac, Goran and Goulart, Paul and Bemporad, Alberto and Boyd, Stephen},
    year={2020},
    month=feb, pages={637–672} }
+% url={http://dx.doi.org/10.1007/s12532-020-00179-2},
+  % DOI={10.1007/s12532-020-00179-2},
+
+@ARTICLE{Linear_Quadratic_Tracking,
+  author={Hu, Dawei and Li, Gangyan and Zhu, Guoming and Liu, Zihao and Tu, Ming},
+  journal={IEEE Access}, 
+  title={Linear-Quadratic Tracking Control of a Commercial Vehicle Air Brake System}, 
+  year={2020},
+  volume={8},
+  number={},
+  pages={149741-149750},
+  keywords={Brakes;Valves;Atmospheric modeling;Bars;Solenoids;Nonlinear dynamical systems;Air brake system;proportional valve;control-oriented model;linearization through system identification;linear quadratic tracking}}
+ % doi={10.1109/ACCESS.2020.3016353}}
+
+@inproceedings{ros,
+  title={ROS: an open-source Robot Operating System},
+  author={Quigley, Morgan and Conley, Ken and Gerkey, Brian and Faust, Josh and Foote, Tully and Leibs, Jeremy and Wheeler, Rob and Ng, Andrew Y and others},
+  booktitle={ICRA workshop on open source software},
+  volume={3},
+  number={3.2},
+  pages={5},
+  year={2009},
+  organization={Kobe, Japan}
+}
