--- a/Thesis_Cutini/thesis_bib.bib
+++ b/Thesis_Cutini/thesis_bib.bib
@@ -203,3 +203,12 @@ keywords = {Model predictive control, Stability, Optimality, Robustness}
   year={2009},
   organization={Kobe, Japan}
 }
+
+@Article{Andersson2018,
+  Author = {Joel A E Andersson and Joris Gillis and Greg Horn
+            and James B Rawlings and Moritz Diehl},
+  Title = {{CasADi} -- {A} software framework for nonlinear optimization
+           and optimal control},
+  Journal = {Mathematical Programming Computation},
+  Year = {2018},
+}
